--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,83 @@
+*, *::after, *::before {
+  margin: 0;
+  box-sizing: border-box; }
 
+.top-image-container {
+  background-image: url(../img/hero.png); }
+
+.about {
+  background-image: url(../img/about.jpeg); }
+
+nav {
+  display: flex;
+  background: transparent; }
+
+.nav-box {
+  width: 50%; }
+
+.right {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column; }
+
+.right:hover ul {
+  display: inline; }
+
+ul {
+  display: none;
+  list-style: none; }
+
+@media screen and (max-width: 600px) {
+  .left {
+    display: none; }
+
+  .right {
+    align-items: flex-start; } }
+html, body {
+  height: 100%; }
+
+.top-image-container {
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.hero {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.about-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(244, 252, 206, 0.7);
+  margin: 30px;
+  height: 60%; }
+
+.about-box * {
+  padding: 20px; }
+
+@media screen and (max-width: 600px) {
+  .about {
+    width: 100%;
+    flex-direction: column; } }
 
 /*# sourceMappingURL=styles.css.map */
