--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,27 @@
+@import url("https://fonts.googleapis.com/css?family=Lato|Roboto+Mono");
 *, *::after, *::before {
   margin: 0;
   box-sizing: border-box; }
 
-.top-image-container {
-  background-image: url(../img/hero.png); }
+body {
+  font-family: "Lato", sans-serif; }
 
-.about {
-  background-image: url(../img/about.jpeg); }
+h1, h2 {
+  font-family: "Roboto Mono", monospace; }
+
+.top-image-container {
+  background-image: url(../img/hero.jpg); }
+
+.about, .contact {
+  background-image: url(../img/about.jpg); }
+
+.work {
+  background-image: url(../img/hero.jpg); }
 
 nav {
   display: flex;
-  background: transparent; }
+  background: transparent;
+  padding: 20px 40px; }
 
 .nav-box {
   width: 50%; }
@@ -26,6 +37,14 @@ nav {
 ul {
   display: none;
   list-style: none; }
+
+li {
+  background-color: rgba(244, 252, 206, 0.7);
+  padding: 10px; }
+
+li:hover {
+  color: RebeccaPurple;
+  text-decoration: line-through; }
 
 @media screen and (max-width: 600px) {
   .left {
@@ -84,38 +103,65 @@ html, body {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap; }
+  background-size: cover; }
 
 .work h2 {
+  padding-top: 10%;
   width: 100%;
   text-align: center; }
 
 .work-container {
+  background-color: rgba(244, 252, 206, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+  height: 50%; }
 
 .work-box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 3px solid blue;
-  width: 100%; }
+  width: 90%;
+  height: 100%; }
 
 .work-box img {
   width: 90%; }
 
-@media screen and (max-width: 600px) {
+.work-container a {
+  color: black;
+  text-decoration: none; }
+
+.work-container a:hover {
+  color: RebeccaPurple;
+  text-decoration: line-through; }
+
+@media screen and (max-width: 800px) {
   .work-container {
     display: block;
     overflow: auto; }
 
   .work {
     overflow: auto; } }
+.contact {
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.contact-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40%;
+  width: 40%;
+  background-color: rgba(244, 252, 206, 0.7); }
 
 /*# sourceMappingURL=styles.css.map */
