--- a/sass/layouts/work.scss
+++ b/sass/layouts/work.scss
@@ -1,20 +1,21 @@
 .work {
   @include parallax-effect;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+
 }
 
 .work h2 {
+  padding-top: 10%;
   width: 100%;
   text-align: center;
 }
 
 .work-container {
+  background-color: $content-background-color;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 50%;
 }
 
 .work-box {
@@ -22,15 +23,25 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 3px solid blue;
-  width: 100%;
+  width: 90%;
+  height: 100%;
+  // background-color: $content-background-color;
 }
 
 .work-box img {
   width: 90%;
 }
 
-@media screen and (max-width: 600px) {
+.work-container a {
+  color: black;
+  text-decoration: none;
+}
+
+.work-container a:hover{
+  @include hover;
+}
+
+@media screen and (max-width: 800px) {
 
   .work-container {
     display: block;
