Continue to add styling, add hover effects, add transition, style icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
 h1, h2 {
   font-family: "Roboto Mono", monospace; }
 
+a:hover {
+  color: RebeccaPurple;
+  text-decoration: line-through; }
+
 .top-image-container {
   background-image: url(../img/hero.jpg); }
 
@@ -19,19 +23,21 @@ h1, h2 {
   background-image: url(../img/hero.jpg); }
 
 nav {
-  display: flex;
   background: transparent;
   padding: 20px 40px; }
 
 .nav-box {
-  width: 50%; }
-
-.right {
+  width: 10%;
   display: flex;
-  align-items: flex-end;
-  flex-direction: column; }
+  flex-direction: column;
+  position: fixed; }
 
-.right:hover ul {
+.nav-box i {
+  font-size: 30px;
+  text-decoration: overline;
+  text-decoration-color: rgba(244, 252, 206, 0.7); }
+
+.nav-box:hover ul {
   display: inline; }
 
 ul {
@@ -66,12 +72,28 @@ html, body {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  flex-direction: column; }
+
+.hero a {
+  order: 1;
+  color: black; }
+
+.hero i {
+  font-size: 50px; }
 
 .hero-text {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  align-items: center; }
+  height: 30%;
+  transition: background-color 2s; }
+
+.hero a:hover + .hero-text {
+  background-color: rgba(244, 252, 206, 0.7);
+  border-radius: 30%;
+  padding: 0px 20px; }
 
 .about {
   display: flex;
@@ -89,10 +111,16 @@ html, body {
   flex-direction: column;
   background-color: rgba(244, 252, 206, 0.7);
   margin: 30px;
+  padding: 30px;
   height: 60%; }
 
 .about-box * {
   padding: 20px; }
+
+.about i {
+  font-size: 50px;
+  border: 3px solid black;
+  border-radius: 50%; }
 
 @media screen and (max-width: 600px) {
   .about {
@@ -132,10 +160,6 @@ html, body {
 .work-container a {
   color: black;
   text-decoration: none; }
-
-.work-container a:hover {
-  color: RebeccaPurple;
-  text-decoration: line-through; }
 
 @media screen and (max-width: 800px) {
   .work-container {
