--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,6 +13,12 @@
   text-decoration: line-through;
 }
 
+@mixin icons-styling($pixels) {
+  font-size: $pixels;
+  border: 3px solid black;
+  border-radius: 50%;
+}
+
 $content-background-color: rgba(244, 252, 206, 0.7);
 $lato: 'Lato', sans-serif;
 $roboto: 'Roboto Mono', monospace;
@@ -31,7 +37,9 @@ h1, h2 {
   font-family: $roboto;
 }
 
-
+a:hover {
+  @include hover;
+}
 
 .top-image-container {
   background-image: url(../img/hero.jpg);
