--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,12 @@ html, body {
   border: 3px solid black;
   border-radius: 50%; }
 
+.about i:hover {
+  animation: rotate 2s; }
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg); } }
 @media screen and (max-width: 600px) {
   .about {
     width: 100%;
