--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,11 @@ html, body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
   background-color: rgba(244, 252, 206, 0.7);
   margin: 30px;
   padding: 30px;
-  height: 60%; }
+  height: 80%; }
 
 .about-box * {
   padding: 20px; }
@@ -131,7 +132,16 @@ html, body {
 @media screen and (max-width: 600px) {
   .about {
     width: 100%;
-    flex-direction: column; } }
+    flex-direction: column; }
+
+  .about i {
+    font-size: 20px;
+    border: 3px solid black;
+    border-radius: 50%; }
+
+  .about-box {
+    margin: 10px;
+    padding: 10px; } }
 .work {
   height: 100%;
   background-attachment: fixed;
@@ -140,17 +150,16 @@ html, body {
   background-size: cover; }
 
 .work h2 {
-  padding-top: 10%;
+  padding-top: 5%;
   width: 100%;
   text-align: center; }
 
 .work-container {
   background-color: rgba(244, 252, 206, 0.7);
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50%; }
+  height: 70%; }
 
 .work-box {
   display: flex;
@@ -158,7 +167,8 @@ html, body {
   align-items: center;
   justify-content: center;
   width: 90%;
-  height: 100%; }
+  height: 40vh;
+  background-color: rgba(244, 252, 206, 0.7); }
 
 .work-box img {
   width: 90%; }
@@ -168,9 +178,14 @@ html, body {
   text-decoration: none; }
 
 @media screen and (max-width: 800px) {
+  .work-box {
+    border: none;
+    height: 100%;
+    margin: 0; }
+
   .work-container {
     display: block;
-    overflow: auto; }
+    background-color: transparent; }
 
   .work {
     overflow: auto; } }
