--- a/sass/layouts/about.scss
+++ b/sass/layouts/about.scss
@@ -9,10 +9,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
   background-color: $content-background-color;
   margin: 30px;
   padding: 30px;
-  height: 60%;
+  height: 80%;
 }
 
 .about-box * {
@@ -37,5 +38,13 @@
   .about {
     width: 100%;
     flex-direction: column;
+  }
+  .about i {
+    @include icons-styling(20px);
+  }
+
+  .about-box {
+    margin: 10px;
+    padding: 10px;
   }
 }
