--- a/sass/layouts/work.scss
+++ b/sass/layouts/work.scss
@@ -4,7 +4,7 @@
 }
 
 .work h2 {
-  padding-top: 10%;
+  padding-top: 5%;
   width: 100%;
   text-align: center;
 }
@@ -12,10 +12,9 @@
 .work-container {
   background-color: $content-background-color;
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50%;
+  height: 70%;
 }
 
 .work-box {
@@ -24,8 +23,8 @@
   align-items: center;
   justify-content: center;
   width: 90%;
-  height: 100%;
-  // background-color: $content-background-color;
+  height: 40vh;
+  background-color: $content-background-color;
 }
 
 .work-box img {
@@ -39,10 +38,15 @@
 
 
 @media screen and (max-width: 800px) {
+  .work-box {
+    border: none;
+    height: 100%;
+    margin: 0;
+  }
 
   .work-container {
     display: block;
-    overflow: auto;
+    background-color: transparent;
   }
 
   .work {
